# wai

./: .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  README.md  _typos.toml  book.toml  build.rs  justfile  lefthook.yml  llm.txt  manifest  package.json  prek.toml  wai-improvement-proposals.md  workflow-protocols.md
.beads/: dolt-monitor.pid  dolt-server.activity  interactions.jsonl  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/hooks/: pre-commit  pre-push  prepare-commit-msg
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.espectacular/: config.toml
.espectacular/agent-config-sync/: add-a-rule.toml  add-a-skill.toml  auto-generated-header.toml  available-templates.toml  built-in-target-activation.toml  category-grouping-in-list-output.toml  check-sync-status.toml  config-directory-structure.toml  create-hierarchical-skill.toml  create-skill-from-template.toml  empty-segments-rejected.toml  execute-projections.toml  flat-name-collision-with-category-directory-rejected.toml  flat-names-unchanged.toml  frontmatter-name-for-hierarchical-skill.toml  frontmatter-translation.toml  generated-file-header.toml  import-from-claude-directory.toml  import-from-cursorrules.toml  invalid-hierarchical-names-rejected.toml  list-configs.toml  no-template-gives-bare-stub.toml  projections-file-format.toml  skill-file-generated-at-correct-path.toml  templates-are-portable.toml  unknown-template-name-rejected.toml
.espectacular/agnostic-capabilities/: agnostic-check-mapping.toml  check-output-with-intent-and-success-criteria-json.toml  check-output-with-intent-and-success-criteria-verbose.toml
.espectacular/cli-core/: add-artifacts-and-resources-to-a-project.toml  add-skill-creates-skill-file.toml  add-skill-with-template.toml  agent-config-sync-status.toml  already-initialized.toml  ask-reasoning-questions.toml  at-least-one-workspace-has-beads-counts-column-shown-globally.toml  auto-confirm.toml  configuration-validation.toml  contextual-suggestions.toml  create-new-items.toml  custom-depth.toml  custom-root.toml  (+47 more)
.wai/: .gitignore  AGENTS.md  config.toml
docs/: book.toml  feedback-loop-design.md  review_way_agnostic_final_report.md  review_way_agnostic_stage1.md  review_way_agnostic_stage2.md  review_way_agnostic_stage3.md  review_way_agnostic_stage4.md
openspec/: project.md
scripts/: test-claude-cli-backend.sh  update-homebrew.py  update-scoop.py
src/: cli.rs  config.rs  context.rs  error.rs  freshness.rs  guided_flows.rs  help.rs  json.rs  lib.rs  llm.rs  main.rs  managed_block.rs  openspec.rs  output.rs  plugin.rs  state.rs  suggestions.rs  sync_core.rs  tutorial.rs  workflows.rs  workspace.rs
tests/: add_test.rs  close_test.rs  config_test.rs  doctor_test.rs  freshness_test.rs  handoff_test.rs  import_test.rs  init_test.rs  integration.rs  ls_test.rs  move_test.rs  new_test.rs  phase_test.rs  prime_test.rs  reflect_test.rs  search_test.rs  show_test.rs  status_test.rs  suggestions_test.rs  sync_test.rs  timeline_test.rs  tutorial_test.rs  way_test.rs  workflows_test.rs
(+823 files in other folders)
