[package]
name = "wai"
version = "2026.4.7"
edition = "2024"
description = "Workflow manager for AI-driven development"
license = "MIT"
repository = "https://github.com/charly-vibes/wai"
keywords = ["cli", "workflow", "ai", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Error handling - beautiful diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Interactive prompts
cliclack = "0.3"

# Progress indicators
indicatif = "0.17"

# Colors (respects NO_COLOR)
owo-colors = "4"

# Serialization for config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yml = "0.0.12"
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directory traversal
walkdir = "2"

# Regex support for search
regex = "1"

# String similarity for typo detection
strsim = "0.11"

# HTTP client for Claude API (blocking, JSON)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Async runtime (optional, for future use)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"], optional = true }

# Directories for config/data paths
dirs = "6"

# Slug generation for filenames
slug = "0.1"

# Shell-word splitting (handles quoted arguments in plugin hook commands)
shell-words = "1"

# Tar archive support (for skill export/import)
tar = "0.4"
flate2 = "1"

# Cryptographic hashing (SHA-256 for artifact integrity)
sha2 = "0.10"

[features]
default = []
async = ["tokio"]

[dev-dependencies]
assert_cmd = "2"
chrono = "0.4"
predicates = "3"
tempfile = "3"
serial_test = "3"

[[bin]]
name = "wai"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[build-dependencies]
